--- a/public/css/admin/all.css
+++ b/public/css/admin/all.css
@@ -17,4 +17,5 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css');
 @import url('https://cdn.jsdelivr.net/npm/sweetalert2@8.19.0/dist/sweetalert2.min.css');
-@import url('https://use.fontawesome.com/releases/v5.3.1/css/all.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css');
+/* @import url('https://use.fontawesome.com/releases/v5.3.1/css/all.css'); */
