--- a/public/css/site_client/auth.css
+++ b/public/css/site_client/auth.css
@@ -42,7 +42,7 @@ body {
 }
 .login_btn {
     width: 100%;
-    background: #c0392b !important;
+    /* background: #c0392b !important; */
     color: white !important;
 }
 .login_btn:focus {
