--- a/public/css/admin/internal-css-files/content-page.css
+++ b/public/css/admin/internal-css-files/content-page.css
@@ -1,3 +1,11 @@
+.nav-config .nav-item .activated {
+    color: rgba(0,0,0,.9) !important;
+}
+
+.nav-config .nav-item a {
+    color: rgba(0,0,0,.55) !important;
+}
+
 .modal-back {
     background: rgba( 255, 255, 255, .8);
 }
