ajustes de layout site-config

--- a/public/css/admin/internal-css-files/tabs.css
+++ b/public/css/admin/internal-css-files/tabs.css
@@ -7,9 +7,9 @@
     font-weight: bold !important;
 }
 
-.nav-item a {
+/* .nav-item a {
     color: #a5a5a5 !important;
-}
+} */
 
 .custom-file-input~.custom-file-label::after {
     content: attr(data-label);
