--- a/public/css/admin/internal-css-files/content-page.css
+++ b/public/css/admin/internal-css-files/content-page.css
@@ -1,13 +1,23 @@
-.nav-config .nav-item .activated {
-    color: rgba(0,0,0,.9) !important;
+.nav-link {
+    color: #b8bfce !important;
 }
 
-.nav-config .nav-item a {
-    color: rgba(0,0,0,.55) !important;
+.nav-link:hover {
+    color: #fff !important;
+}
+
+.nav-config .nav-item .activated {
+    color: #16c7ff !important;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.nav-config .nav-item i {
+    padding-right: 5px;
 }
 
 .modal-back {
-    background: rgba( 255, 255, 255, .8);
+    background: rgba(255, 255, 255, .8);
 }
 
 .title-page-content {
@@ -101,12 +111,14 @@
     flex-direction: row;
 }
 
-.iconEmpromocao, .iconComdesconto {
+.iconEmpromocao,
+.iconComdesconto {
     width: 25px;
     margin-right: 5px;
 }
 
-.iconEmpromocao img, .iconComdesconto img {
+.iconEmpromocao img,
+.iconComdesconto img {
     width: 20px;
 }
 
@@ -146,14 +158,14 @@
     background: #212529;
     color: #fff;
     text-decoration: none;
-    -webkit-border-radius:4px;
-    -moz-border-radius:4px;
-    border-radius:4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
 }
 
 .paginator_item:hover {
     background: #212529f7;
-    color: #fff; 
+    color: #fff;
 }
 
 /*.select2-container--default .select2-selection--multiple {
@@ -185,7 +197,7 @@
     justify-content: center;
 }
 
-.tox-dialog__disable-scroll .tox-dialog{
+.tox-dialog__disable-scroll .tox-dialog {
     z-index: 2 !important;
 }
 
@@ -198,9 +210,9 @@ ul.cloud {
     justify-content: center;
     line-height: 2.75rem;
     width: 100%;
-  }
-  
-  ul.cloud a {
+}
+
+ul.cloud a {
     /*   
     Not supported by any browser at the moment :(
     --size: attr(data-weight number); 
@@ -217,9 +229,9 @@ ul.cloud {
     For different tones of a single color
     opacity: calc((15 - (9 - var(--size))) / 15); 
     */
-  }
-  
-  /* ul.cloud a[data-weight="1"] { --size: 1; }
+}
+
+/* ul.cloud a[data-weight="1"] { --size: 1; }
   ul.cloud a[data-weight="2"] { --size: 2; }
   ul.cloud a[data-weight="3"] { --size: 3; }
   ul.cloud a[data-weight="4"] { --size: 4; }
@@ -228,21 +240,29 @@ ul.cloud {
   ul.cloud a[data-weight="7"] { --size: 10; }
   ul.cloud a[data-weight="8"] { --size: 13; }
   ul.cloud a[data-weight="9"] { --size: 16; } */
-  
-  ul[data-show-value] a::after {
+
+ul[data-show-value] a::after {
     content: " (" attr(data-weight) ")";
     font-size: 1rem;
-  }
-  
-  ul.cloud li:nth-child(2n+1) a { --color: #181; }
-  ul.cloud li:nth-child(3n+1) a { --color: #33a; }
-  ul.cloud li:nth-child(4n+1) a { --color: #c38; }
-  
-  ul.cloud a:focus {
+}
+
+ul.cloud li:nth-child(2n+1) a {
+    --color: #181;
+}
+
+ul.cloud li:nth-child(3n+1) a {
+    --color: #33a;
+}
+
+ul.cloud li:nth-child(4n+1) a {
+    --color: #c38;
+}
+
+ul.cloud a:focus {
     outline: 1px dashed;
-  }
-  
-  ul.cloud a::before {
+}
+
+ul.cloud a::before {
     content: "";
     position: absolute;
     top: 0;
@@ -253,21 +273,21 @@ ul.cloud {
     transform: translate(-50%, 0);
     opacity: 0.15;
     transition: width 0.25s;
-  }
-  
-  ul.cloud a:focus::before,
-  ul.cloud a:hover::before {
-    width: 100%;
-  }
+}
 
-  .btn-default {
+ul.cloud a:focus::before,
+ul.cloud a:hover::before {
+    width: 100%;
+}
+
+.btn-default {
     color: #fff !important;
     background-color: #212529 !important;
-    border-color:#212529 !important;
+    border-color: #212529 !important;
 }
-  
-  @media (prefers-reduced-motion) {
+
+@media (prefers-reduced-motion) {
     ul.cloud * {
-      transition: none !important;
+        transition: none !important;
     }
-  }
+}
