--- a/public/css/admin/internal-css-files/content-page.css
+++ b/public/css/admin/internal-css-files/content-page.css
@@ -20,6 +20,11 @@
     background: rgba(255, 255, 255, .8);
 }
 
+.card-person{
+    border: 1px solid rgba(0,0,0,.125) !important;
+    border-radius: 5px;
+}
+
 .title-page-content {
     width: 100%;
     display: flex;
