--- a/public/css/tenant_client/vuefood.css
+++ b/public/css/tenant_client/vuefood.css
@@ -195,18 +195,18 @@ body {
 .card--flat .card-footer {
   border-radius: 0 0 .75rem .75rem;
   font-weight: 600;
-  background: #06C167;
+  background: #4040ff;
   transition: background .5s ease;
 }
 
 .card--flat .card-footer:hover {
-  background: #028948;
+  background: #4060ff;
 }
 
 /* end car redesign */
 .disabled .card-footer-custom {
-  background: #97df92;
-  border-top: 1px solid #97df92;
+  background: #4060ff;
+  border-top: 1px solid #4060ff;
   cursor: no-drop;
 }
 
@@ -295,7 +295,7 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  max-width: calc(100% + 40px);
+  max-width: calc(100% + 50px);
   width: 100%;
   padding: 30px 15px 15px;
   overflow: auto;
@@ -303,9 +303,9 @@ body {
 }
 
 .list-categories a {
-  /* width: 90px;
+  width: 90px;
   height: 150px;
-  padding: 20px 10px; */
+  padding: 20px 10px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -354,12 +354,15 @@ body {
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
-  box-shadow: 0 0 0px 2px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 0 0px 2px rgba(0, 0, 0, 0.1); */
   display: flex;
   align-items: center;
   justify-content: center;
   transition: box-shadow .5s ease, background .7s ease, transform .5s ease;
-  ;
+}
+
+.list-categories .icon img {
+  border-radius: 50%;
 }
 
 .list-categories .icon i{
@@ -379,7 +382,7 @@ body {
 
   .list-categories a {
     flex-direction: column;
-    width: 90px;
+    width: 110px;
     height: 150px;
     min-width: auto;
     padding: 20px 10px;
@@ -401,7 +404,7 @@ body {
 .nav-cart {
   width: 90px;
   height: 50px;
-  background: #06C167;
+  background: #4040ff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -410,7 +413,7 @@ body {
 }
 
 .nav-cart:hover {
-  background: #028948;
+  background: #4060ff;
 }
 
 .nav-item-text .nav-link {
