pagina do carrinho

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1286,8 +1286,8 @@ svg:not(:root) {
         var(--tw-ring-shadow, 0 0 transparent), var(--tw-shadow);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 transparent),
         var(--tw-ring-shadow, 0 0 transparent), var(--tw-shadow);
-    -webkit-transform: scale(1.05);
-    transform: scale(1.05);
+    /* -webkit-transform: scale(1.05);
+    transform: scale(1.05); */
 }
 .card__icon-circle {
     border-radius: 9999px;
@@ -1371,8 +1371,8 @@ svg:not(:root) {
     height: 100%;
 }
 .pricingTable .card:hover {
-    -webkit-transform: scale(1.01);
-    transform: scale(1.01);
+    /* -webkit-transform: scale(1.01); */
+    /* transform: scale(1.01); */
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
     --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
