--- a/public/css/tenant_client/vuefood.css
+++ b/public/css/tenant_client/vuefood.css
@@ -207,7 +207,7 @@ body {
   padding: 20px 24px;
   z-index: 2;
   background-color: #fff;
-  box-shadow: 0 0 0 2px #fff;
+  /* box-shadow: 0 0 0 2px #fff; */
   border-radius: .75rem .75rem 0 0;
 }
 
