rotina inicial de recebimento dados do checkout no service

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1071,16 +1071,16 @@ h3 {
     color: rgba(239, 68, 68, var(--tw-text-opacity));
 }
 .main--footerFixed {
-    margin-bottom: 5rem;
+    /* margin-bottom: 5rem; */
 }
 @media (min-width: 768px) {
     .main--footerFixed {
-        margin-bottom: 3.5rem;
+        /* margin-bottom: 3.5rem; */
     }
 }
 @media (min-width: 1024px) {
     .main--footerFixed {
-        margin-bottom: 3.5rem;
+        /* margin-bottom: 3.5rem; */
     }
 }
 .main-footer--fixed {
