--- a/public/css/admin/internal-css-files/sidebar.css
+++ b/public/css/admin/internal-css-files/sidebar.css
@@ -145,7 +145,7 @@ body {
 
 .sidebar-wrapper .sidebar-brand {
     width: 100%;
-    height: 65px !important;
+    /* height: 65px !important; */
     padding: 10px 20px;
     display: flex;
     align-items: center;
