--- a/public/css/admin/internal-css-files/fonts.css
+++ b/public/css/admin/internal-css-files/fonts.css
@@ -1,17 +1,17 @@
 @font-face {
-    font-family: 'Woff';
-    src: url('../fonts/ionicons.woff') format('woff');
+    font-family: 'gilroybold';
+    src: url('../fonts/gilroy-bold.woff') format('woff');
     font-weight: normal;
 }
 
 @font-face {
-    font-family: 'Woff';
-    src: url('../fonts/ionicons.woff2') format('woff');;
+    font-family: 'gilroylight';
+    src: url('../fonts/gilroy-light.woff') format('woff');;
     font-weight: 600;
 }
 
 @font-face {
-    font-family: 'Woff';
-    src: url('../fonts/ionicons.woff') format('woff');;
+    font-family: 'gilroysemibold';
+    src: url('../fonts/gilroy-semibold.woff') format('woff');;
     font-weight: 300;
 }
