--- a/public/css/tenant_client/tenant_site.css
+++ b/public/css/tenant_client/tenant_site.css
@@ -171,7 +171,7 @@ body {
   box-shadow: 0 2px 16px rgba(85, 86, 138, .06);
   box-shadow: 0 0 10px rgba(0, 0, 0, .1);
   border-radius: 10px;
-  cursor: pointer;
+  /* cursor: pointer; */
   text-decoration: none;
   color: #000;
   color: initial;
@@ -216,6 +216,7 @@ body {
   font-weight: 600;
   background: #4040ff;
   transition: background .5s ease;
+  cursor: pointer;
 }
 
 .card--flat .card-footer:hover {
