--- a/public/css/admin/internal-css-files/sidebar.css
+++ b/public/css/admin/internal-css-files/sidebar.css
@@ -43,7 +43,7 @@ body {
     font-size: 0.9rem;
 }
 
-.page-wrapper .sidebar-wrapper, .sidebar-wrapper .sidebar-brand>a, .sidebar-wrapper .sidebar-dropdown>a:after, .sidebar-wrapper .sidebar-menu .sidebar-dropdown .sidebar-submenu li a:before, .sidebar-wrapper ul li a i, .page-wrapper .page-content, .sidebar-wrapper .sidebar-search input.search-menu, .sidebar-wrapper .sidebar-search .input-group-text, .sidebar-wrapper .sidebar-menu ul li a, #show-sidebar, #close-sidebar {
+.page-wrapper .sidebar-wrapper, .sidebar-wrapper .sidebar-brand>a, .sidebar-wrapper .sidebar-dropdown>a:after, .sidebar-wrapper .sidebar-menu .sidebar-dropdown .sidebar-submenu li a:before, .page-wrapper .page-content, .sidebar-wrapper .sidebar-search input.search-menu, .sidebar-wrapper .sidebar-search .input-group-text, .sidebar-wrapper .sidebar-menu ul li a, #show-sidebar, #close-sidebar {
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
@@ -51,10 +51,18 @@ body {
     transition: all 0.3s ease;
 }
 
+.sidebar-wrapper ul li a i {
+    -webkit-transition: all 0.1s ease;
+    -moz-transition: all 0.1s ease;
+    -ms-transition: all 0.1s ease;
+    -o-transition: all 0.1s ease;
+    transition: all 0.1s ease;
+}
 /*----------------page-wrapper----------------*/
 
 .page-wrapper {
     height: 100vh;
+    background-color: #f8f9fa;
 }
 
 .page-wrapper .theme {
@@ -77,7 +85,7 @@ body {
 
 @media screen and (min-width: 768px) {
     .page-wrapper.toggled .page-content {
-        padding-left: 250px;
+        padding-left: 330px;
     }
 }
 
@@ -108,13 +116,13 @@ body {
 /*----------------sidebar-wrapper----------------*/
 
 .sidebar-wrapper {
-    width: 260px;
+    width: 330px;
     height: 100%;
     display: block;
     max-height: 100%;
     position: fixed;
     top: 0;
-    left: -300px;
+    left: -330px;
     z-index: 1000;
 }
 
@@ -145,10 +153,12 @@ body {
 
 .sidebar-wrapper .sidebar-brand {
     width: 100%;
-    /* height: 65px !important; */
+    height: 64px !important;
     padding: 10px 20px;
     display: flex;
     align-items: center;
+    background-color: #fafbfc;
+    box-shadow: 0 .46875rem 2.1875rem rgba(4,9,20,.03),0 .9375rem 1.40625rem rgba(4,9,20,.03),0 .25rem .53125rem rgba(4,9,20,.05),0 .125rem .1875rem rgba(4,9,20,.03);
 }
 
 .sidebar-wrapper .sidebar-brand>a {
@@ -157,7 +167,8 @@ body {
     flex-grow: 1;
     padding-left: 20px;
     padding-top: 5px;
-
+    font-size: 24px;
+    color: #000 !important;
 }
 
 .sidebar-wrapper .sidebar-brand #close-sidebar {
@@ -238,6 +249,7 @@ body {
     text-decoration: none;
     position: relative;
     padding: 8px 5px 8px 5px;
+    margin-left: 10px;
 }
 
 .sidebar-wrapper .sidebar-menu ul li a i {
@@ -429,11 +441,11 @@ body {
 /*-----------------------------chiller-theme-------------------------------------------------*/
 
 .chiller-theme .sidebar-wrapper {
-    background: #212529;
+    background: #ffffff;
 }
 
 .chiller-theme .sidebar-wrapper .sidebar-header, .chiller-theme .sidebar-wrapper .sidebar-search, .chiller-theme .sidebar-wrapper .sidebar-menu {
-    border-top: 1px solid #212529;
+    /* border-top: 1px solid #212529; */
 }
 
 .chiller-theme .sidebar-wrapper .sidebar-search input.search-menu, .chiller-theme .sidebar-wrapper .sidebar-search .input-group-text {
@@ -442,11 +454,12 @@ body {
 }
 
 .chiller-theme .sidebar-wrapper .sidebar-header .user-info .user-role, .chiller-theme .sidebar-wrapper .sidebar-header .user-info .user-status, .chiller-theme .sidebar-wrapper .sidebar-search input.search-menu, .chiller-theme .sidebar-wrapper .sidebar-search .input-group-text, .chiller-theme .sidebar-wrapper .sidebar-brand>a, .chiller-theme .sidebar-wrapper .sidebar-menu ul li a, .chiller-theme .sidebar-footer>a {
-    color: #b8bfce;
+    color: #343a40;
+    letter-spacing: 1px;
 }
 
 .chiller-theme .sidebar-wrapper .sidebar-menu ul li:hover>a, .chiller-theme .sidebar-wrapper .sidebar-menu .sidebar-dropdown.active_side>a, .chiller-theme .sidebar-wrapper .sidebar-header .user-info, .chiller-theme .sidebar-wrapper .sidebar-brand>a:hover, .chiller-theme .sidebar-footer>a:hover i {
-    color: #fff;
+    color: rgb(64, 64, 255);
 }
 
 .page-wrapper.chiller-theme.toggled #close-sidebar {
@@ -454,16 +467,18 @@ body {
 }
 
 .page-wrapper.chiller-theme.toggled #close-sidebar:hover {
-    color: #ffffff;
+    /* color: #ffffff; */
 }
 
 .chiller-theme .sidebar-wrapper ul li:hover a i, .chiller-theme .sidebar-wrapper .sidebar-dropdown .sidebar-submenu li a:hover:before, .chiller-theme .sidebar-wrapper .sidebar-search input.search-menu:focus+span, .chiller-theme .sidebar-wrapper .sidebar-menu .sidebar-dropdown.active_side a i {
-    color: #16c7ff;
-    text-shadow: 0px 0px 10px rgba(22, 199, 255, 0.5);
+    color: #fff;
+    background: rgb(64, 64, 255) !important;
+    font-weight: 600;
+    /* text-shadow: 0px 0px 10px rgba(22, 199, 255, 0.5); */
 }
 
 .chiller-theme .sidebar-wrapper .sidebar-menu ul li a i, .chiller-theme .sidebar-wrapper .sidebar-menu .sidebar-dropdown div, .chiller-theme .sidebar-wrapper .sidebar-search input.search-menu, .chiller-theme .sidebar-wrapper .sidebar-search .input-group-text {
-    background: #58585836;
+    background: #58585814;
 }
 
 .chiller-theme .sidebar-wrapper .sidebar-menu .header-menu span {
@@ -485,11 +500,13 @@ body {
 }
 
 .ativo a {
-    color: #16c7ff !important;
+    color: rgb(64, 64, 255) !important;
+    font-weight: 600;
 }
 
 .ativo a i {
-    color: #16c7ff;
+    color: #fff;
+    background-color: rgb(64, 64, 255) !important;
 }
 
 #breadcrumb {
