--- a/public/css/admin/internal-css-files/sidebar.css
+++ b/public/css/admin/internal-css-files/sidebar.css
@@ -486,9 +486,8 @@ body {
 }
 
 .chiller-theme .sidebar-footer {
-    background: #3a3f48;
-    box-shadow: 0px -1px 5px #282c33;
-    border-top: 1px solid #464a52;
+    background: #fff;
+    box-shadow:  0px -1px 4px rgb(4 9 20 / 45%)
 }
 
 .chiller-theme .sidebar-footer>a:first-child {
