--- a/public/css/tenant_client/tenant_site.css
+++ b/public/css/tenant_client/tenant_site.css
@@ -397,8 +397,8 @@ body {
   display: block;
   color: #000;
   font-weight: 500;
-  margin-left: 20px;
-  /* margin-top: 20px; */
+  /* margin-left: 20px;
+  margin-top: 20px; */
   font-size: 16px;
 }
 
