--- a/public/css/site.css
+++ b/public/css/site.css
@@ -740,6 +740,32 @@ h3 {
     display: inline-block;
     padding: 0.25rem 0.75rem;
 }
+
+.hero__title2 {
+    font-weight: 700;
+    font-size: 1rem;
+    line-height: 2rem;
+    line-height: 1.5;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    text-align: center;
+}
+@media (min-width: 1024px) {
+    .hero__title2 {
+        font-size: 2rem;
+        line-height: 1;
+        text-align: left;
+        letter-spacing: -0.05em;
+    }
+}
+.hero__title2 .hero__title2-decorator {
+    border-radius: 0.25rem;
+    border-style: dashed;
+    border-width: 2px;
+    display: inline-block;
+    padding: 0.25rem 0.75rem;
+}
+
 .hero__text {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -872,6 +898,11 @@ h3 {
     font-weight: 500;
     padding: 0.5rem 1rem;
 }
+
+.brand-collor {
+    color: #4040ff;
+}
+
 .button.button--filled.button--primary {
     --tw-bg-opacity: 1;
     background-color: #4040ff;
