--- a/public/css/admin/all.css
+++ b/public/css/admin/all.css
@@ -10,13 +10,13 @@
 @import './internal-css-files/cookies.css';
 @import './internal-css-files/responsive.css';
 @import './internal-css-files/load.css';
+@import './internal-css-files/font-awesome-6.css';
 
 /*external*/
 @import url('https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css');
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css');
 @import url('https://cdn.jsdelivr.net/npm/sweetalert2@8.19.0/dist/sweetalert2.min.css');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css');
 @import url('https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css');
 @import url('https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.rtl.min.css');
 @import url('https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css');
