fix: cdn fontawesome

--- a/public/css/admin/internal-css-files/fonts.css
+++ b/public/css/admin/internal-css-files/fonts.css
@@ -6,12 +6,12 @@
 
 @font-face {
     font-family: 'gilroylight';
-    src: url('../fonts/gilroy-light.woff') format('woff');;
+    src: url('../fonts/gilroy-light.woff') format('woff');
     font-weight: 600;
 }
 
 @font-face {
     font-family: 'gilroysemibold';
-    src: url('../fonts/gilroy-semibold.woff') format('woff');;
+    src: url('../fonts/gilroy-semibold.woff') format('woff');
     font-weight: 300;
 }
