--- a/public/css/tenant_client/tenant_site.css
+++ b/public/css/tenant_client/tenant_site.css
@@ -442,8 +442,10 @@ ol li.carousel__slide{
 }
 
 .list-categories .icon img {
-  border-radius: 50%;
+  max-width: 100%;
   max-height: 100%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -498,6 +500,11 @@ ol li.carousel__slide{
   .list-categories .icon {
     width: 4rem;
     height: 4rem;
+    overflow: hidden;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 
